collection cards can be signified as 'selected'

--- a/app/assets/stylesheets/components/_chess-box.scss
+++ b/app/assets/stylesheets/components/_chess-box.scss
@@ -65,7 +65,7 @@
 }
 .game-notation {
   width: 100%;
-  box-shadow: 1px 1px #D6E0E5;
+  // box-shadow: 1px 1px #D6E0E5;
 }
 .chess-description {
   font-weight: lighter;
