--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,16 +1,32 @@
 /* Main navbar */
 .navbar {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
-  transition: all 0.3s ease;
-  height: 60px;
+  height: 70px;
   padding: 0px 30px;
   position: relative;
+  background-color: transparent;
+  transition: 0.5s background-color ease;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+}
+
+.navbar-white {
+  background-color: white;
+}
+
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 /* Logo */
 .navbar-brand img {
   height: 50px;
+  border-radius: 50%;
   margin-left: 20px;
   margin-top: 10px;
 }
@@ -32,6 +48,9 @@
   position: absolute;
   top: 10px;
   right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 /* Basic navbar item */
@@ -44,9 +63,10 @@
 .navbar-link {
   color: #616668;
   font-size: 14px;
+  text-decoration: none;
 }
 .navbar-link:hover {
-  color: #da552f;
+  color: $orange;
   text-decoration: none;
   font-weight: bold;
 
@@ -68,7 +88,7 @@
 }
 .navbar-dropdown-menu li > a:hover {
   background: transparent !important;
-  color: #da552f !important;
+  color: $orange !important;
 }
 .navbar-dropdown-menu:before {
   content: ' ';
@@ -81,4 +101,17 @@
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
+}
+
+.navbar-wagon-dropdown-menu-current li > a {
+  transition: color 0.3s ease;
+  font-weight: bolder !important;
+  color: $orange !important;
+  font-size: 14px !important;
+  line-height: 22px !important;
+  padding: 10px 20px;
+}
+.navbar-wagon-dropdown-menu-current li > a:hover {
+  background: transparent !important;
+  color: $orange !important;
 }
