--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,28 +1,69 @@
+<div class="navbar">
 
-<div class="navbar-wagon <%= yield(:navbar_class) %>">
+  <!-- Logo -->
+  <% if user_signed_in? %>
+  <!-- logo redirection to all games when logged in -->
+    <%= link_to collections_path, class: "navbar-brand" do %>
+      <%= image_tag "chess-rise-logo.png", height: 50 %>
+    <% end %>
 
-  <!-- Left Navigation -->
-  <div class="navbar-left hidden-xs hidden-sm">
-    <a href="/" class="navbar-brand">
-      <img src="<%= image_path('App icon detouré.png') %>" alt="logo">
-    </a>
-   <!--  <a href=""><i class="far fa-window-restore navbar-item navbar-link"></i></a>
-    <a href=""><i class="fas fa-trash-alt navbar-item navbar-link"></i></a>
-    <a href=""><i class="fas fa-plus-square navbar-item navbar-link"></i></a> -->
-  </div>
+    <% else %>
+    <!-- logo redirection to home page when logged out -->
+    <%= link_to root_path, class: "navbar-brand" do %>
+      <%= image_tag "chess-rise-logo.png", height: 50 %>
+    <% end %>
+  <% end %>
 
-<!-- Right Navigation -->
+
+  <!-- Right Navigation -->
+
   <div class="navbar-right hidden-xs hidden-sm">
-    <div class="navbar-item">
-      <div class="dropdown">
-        <!-- <img src="https://kitt.lewagon.com/placeholder/users/ssaunier" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown"> -->
-        <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="#" style={color: }> Profile </a></li>
-          <li><a href="#"> Log Out </a></li>
-        </ul>
+
+    <% if user_signed_in? %>
+
+      <!-- Links when logged in -->
+
+      <% if controller?("games") && action?("new") %>
+
+        <%= link_to new_game_path, class: "navbar-item navbar-link current-link" do %><i class="far fa-plus-square"></i> Add a game<% end %>
+
+        <%= link_to games_path, class: "navbar-item navbar-link" do %><i class='fas fa-search'></i> Search for games<% end %>
+
+<!--       <% elsif controller?("games") && action?("search") %>
+
+        <%= link_to new_game_path, class: "navbar-item navbar-link" do %><i class="far fa-plus-square"></i> Add a game<% end %>
+
+        <%= link_to games_path, class: "navbar-item navbar-link current-link" do %><i class='fas fa-search'></i> Search for games<% end %>
+ -->
+      <% else %>
+
+        <%= link_to new_game_path, class: "navbar-item navbar-link" do %><i class="far fa-plus-square"></i> Add a game<% end %>
+
+        <%= link_to games_path, class: "navbar-item navbar-link" do %><i class='fas fa-search'></i> Search for games<% end %>
+
+      <% end %>
+
+      <!-- Avatar with dropdown menu -->
+      <div class="navbar-item">
+        <div class="dropdown">
+          <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+          <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
+            <li>
+              <%= link_to destroy_user_session_path, method: :delete do %>
+                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+              <% end %>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
+
+    <% else %>
+
+      <!-- Login and signup links (when logged out) -->
+      <%= link_to t(".sign_up", default: "Sign up"), new_user_registration_path, class: "navbar-item navbar-link" %>
+      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-item navbar-link" %>
+
+    <% end %>
 
   </div>
-
 </div>
