--- a/app/assets/stylesheets/components/_chess-box.scss
+++ b/app/assets/stylesheets/components/_chess-box.scss
@@ -27,14 +27,6 @@
 .control {
   margin: 1px;
 }
-// i {
-//   color: LightGray;
-//   opacity: 0.6;
-// }
-// i:hover {
-//   color: LightGray;
-//   opacity: 1;
-// }
 
 .empty-collection {
   display: flex;
@@ -101,6 +93,7 @@
   display: flex;
   background-color : white;
   padding-top: 100px;
+  // height: calc(100vh-70px);
 }
 
 .moves-bold {
@@ -113,3 +106,4 @@
   font-size: bold;
   cursor: pointer;
 }
+
