--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,10 +1,11 @@
-/* Main navbar */
 .navbar {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   height: 70px;
   padding: 0px 30px;
   position: relative;
+  border-bottom: 1px solid lightgrey;
   background-color: transparent;
+  // background: white;
   transition: 0.5s background-color ease;
   display: flex;
   align-items: center;
