--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -43,8 +43,7 @@
 
       <% end %>
 
-      <!-- Avatar with dropdown menu -->
-      <div class="navbar-item">
+<!--       <div class="navbar-item">
         <div class="dropdown">
           <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
           <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
@@ -55,7 +54,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </div> -->
 
     <% else %>
 
@@ -67,3 +66,4 @@
 
   </div>
 </div>
+
