sidebar and chessbox fixes

--- a/app/assets/stylesheets/components/_chess-box.scss
+++ b/app/assets/stylesheets/components/_chess-box.scss
@@ -20,7 +20,8 @@
 }
 
 .current-move {
-  background: lightgrey;
+  // background: #FF4944; #Corail
+  background: #FFB600;
   font-weight: bold;
 }
 
