--- a/app/views/shared/_chess_box.html.erb
+++ b/app/views/shared/_chess_box.html.erb
@@ -28,7 +28,7 @@
             </div>
           </div>
           <div class="chess-description">
-            <p> <%= game.event %> | <%= game.site %> | <%= game.date %> | <%= game.result %>
+            <p> <%= game.event %> | <%= game.site %> | Round: <%= game.round %> | <%= game.date %> | <%= game.result %>
             </p>
           </div>
         <% else %>
