--- a/app/views/shared/_sidebar_collection.html.erb
+++ b/app/views/shared/_sidebar_collection.html.erb
@@ -1,6 +1,6 @@
 <div class="col-sm-2" id="sidebar-collection">
   <div class="sidebar-header">
-      <p>My collection</p>
+      <p>My collections</p>
   </div>
   <div>
     <% @collections.each do |collection| %>
