--- a/app/assets/stylesheets/layouts/_sidebar_games.scss
+++ b/app/assets/stylesheets/layouts/_sidebar_games.scss
@@ -3,8 +3,8 @@
     background: White;
     transition: all 0.3s;
     padding: 0;
-    border-left: solid 1px lightgrey;
-    border-right: solid 1px lightgrey;
+    border-left: solid 1px LightGray;
+    border-right: solid 1px LightGray;
     overflow-y: scroll;
 }
 
