from chessground to html

--- a/app/views/shared/_chess_box.html.erb
+++ b/app/views/shared/_chess_box.html.erb
@@ -2,13 +2,7 @@
   <% if @game.present? %>
     <div class="board">
       <div id="chessgame"></div>
-      <div class="chess-controls">
-        <div class="btn btn-primary control" id="board-toggle"><img class="touches" src="<%= image_path('rotating.png') %>" alt="play_game"></div>
-        <div class="btn btn-primary control" id="first-move"><img class="touches" src="<%= image_path('first_move.png') %>" alt="play_game"></div>
-        <div class="btn btn-primary control" id="previous-move"><img class="touches" src="<%= image_path('backward-arrow.png') %>" alt="play_game"></div>
-        <div class="btn btn-primary control" id="next-move"><img class="touches" src="<%= image_path('arrow-point-to-right.png') %>" alt="play_game"></div>
-        <div class="btn btn-primary control" id="last-move"><img class="touches" src="<%= image_path('fast-forward-button.png') %>" alt="play_game"></div>
-      </div>
+      <%= render "shared/chess_box_controls" %>
     </div>
 
     <div class="game-notation">
