new game view in collections index. No create action yet

--- a/app/assets/stylesheets/components/_chess-box.scss
+++ b/app/assets/stylesheets/components/_chess-box.scss
@@ -60,6 +60,13 @@
   border: 1px solid lightgrey;
 }
 
+#chessgame-input {
+  width:450px;
+  height:450px;
+  margin-left: 25px;
+  border: 1px solid lightgrey;
+}
+
 .chess-headers {
   background: #F7F7F7;
   padding-left: 10px;
