--- a/app/views/games/newgame.js.erb
+++ b/app/views/games/newgame.js.erb
@@ -10,3 +10,4 @@ function populateChessBox(chessboxHTML) {
 populateChessBox('<%= j render "shared/form_game"%>')
 
 window.initChessgroundInput();
+window.getMoves();
