modal for create new collection

--- a/app/views/shared/_sidebar_collection.html.erb
+++ b/app/views/shared/_sidebar_collection.html.erb
@@ -15,8 +15,30 @@
     <% end %>
   </div>
   <div class="pin-left-bottom">
-    <%= link_to new_collection_path do %>
-      <i class="fas fa-folder-plus" style="color:#1E5772"></i>
-    <% end %>
+    <%#= link_to new_collection_path do %>
+      <!-- <button data-toggle="modal" data-target="#exampleModal">
+        <i class="fas fa-folder-plus" style="color:#1E5772"></i>
+      </button> -->
+      <i class="fas fa-folder-plus" data-toggle="modal" data-target="#exampleModal"" style="color:#1E5772"></i>
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">New collection</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <%= render "shared/form_collection" %>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              <!-- <button type="button" class="btn btn-primary">Save</button> -->
+            </div>
+          </div>
+        </div>
+      </div>
+    <%# end %>
   </div>
 </div>
