--- a/app/views/shared/_form_collection.html.erb
+++ b/app/views/shared/_form_collection.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <%= simple_form_for @collection do |f| %>
     <%= f.input :name %>
-    <%= f.submit %>
+    <%= f.submit "Save", class: "btn btn-primary" %>
   <% end %>
 </div>
