test on search results

--- a/app/views/shared/_search_results.html.erb
+++ b/app/views/shared/_search_results.html.erb
@@ -1,6 +1,33 @@
-<% games.each do |game| %>
+<div class="container">
 
-  <%= game.id %>
+  <p>Number of results: <%= games.count %></p>
+
+  <% games.each do |game| %>
+
+    <div class="card">
+
+      <h3 class="card-header"> <%= game.id %> - <%= game.result %>
+
+      <div class="card-body">
+
+        <h4 class="card-title"><%= game.white_player.last_name %> (<%= game.elo_white %>) vs <%= game.black_player.last_name %> (<%= game.elo_black %>)<h4>
+
+          <p class="card-text">
+            <% game.main_sorted_plies.each do |ply| %>
+              <span><%= ply.move %></span>
+            <% end %>
+          </p>
+      </div>
+
+      <div class="card-footer">
+        <% game.collections.each do |collection| %>
+          <span><%= collection.name %></span>
+        <% end %>
+      </div>
 
 
-<% end %>
+    </div>
+
+  <% end %>
+
+</div>
