--- a/app/views/shared/_sidebar_game.html.erb
+++ b/app/views/shared/_sidebar_game.html.erb
@@ -1,4 +1,4 @@
-<div class="sidebar-games">
+<div class="sidebar-games" id="sidebar-games">
 
   <div class="sidebar-header">
     <% if @collection == "All games" %>
