--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
-<div class="banner" style="background-image: linear-gradient(-225deg,rgba(0,101,168,0.3) 0%, rgba(0,36,61,0.4) 50%), url(<%= image_path('JC_is_the_boss.jpg') %>);">
+<div class="banner" style="background-image: url(<%= image_path('chessrisebanner.png') %>);">
   <div class="banner-content">
-    <h1>ChessRise</h1>
+    <!-- <h1>ChessRise</h1> -->
     <p><span id="banner-typed-text"></span></p>
-    <%= link_to "Jump in", collections_path, class: "btn btn-primary" %>
+    <%#= link_to "Jump in", collections_path, class: "btn btn-primary" %>
   </div>
 </div>
 
