--- a/app/assets/stylesheets/components/_game-cards.scss
+++ b/app/assets/stylesheets/components/_game-cards.scss
@@ -53,3 +53,61 @@
   font-weight: lighter;
 }
 
+.result-game-card {
+  text-decoration: none;
+  padding: 0.75em;
+
+  position: relative;
+  display: flex;
+  /* flex-direction: column; */
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+  justify-content: center;
+  align-item: center;
+
+
+  &:hover {
+    background-color: #3183A8;
+  }
+}
+
+
+.drag-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.fa-grip-horizontal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.result-game-card-body {
+  padding: none;
+}
+
+.result-game-card-players {
+  font-size: 14px;
+  color: black;
+  // font-weight: bold;
+}
+
+.result-game-card-description {
+  font-size: 10px;
+  color: black;
+  font-weight: bold;
+  padding: none;
+}
+
+.result-game-card-persist {
+  background-color: #3183A8;
+  font-weight: bold;
+}
