solved logic inside view (watchout for search method in game controller)

--- a/app/views/shared/_search_results.html.erb
+++ b/app/views/shared/_search_results.html.erb
@@ -1,10 +1,11 @@
 <div class="col-4">
 
-  <p>Number of results: <%= games.count %></p>
-
- <!--  <div class="card-deck flex-direction:row"> -->
+  <% if games.present? %>
+    <p>Number of results: <%= games.count %></p>
 
     <% games.each do |game| %>
+    <%# game = game[0] %>
+
 
       <div class="result-game-card border-secondary mb-2" style="width: 20rem;">
 
@@ -14,16 +15,44 @@
 
         <div class="result-game-card-body">
 
-          <h5 class="card-title result-game-card-players"><%= game.white_player.last_name %><span class="smaller-font"> (<%= game.elo_white %>)</span> <span class="italique">vs</span> <%= game.black_player.last_name %><span class="smaller-font"> (<%= game.elo_black %>)</span></h5>
+          <h5 class="card-title result-game-card-players">
 
-          <h6 class="result-game-card-description">Result: <%= game.result %></h6>
+            <% if game[0].white_player.present? && game[0].black_player.present? %>
 
-          <p class="card-text game-card-moves"> [...] 9. c4 Ng6 10. Qa4 Bd7 11. Qb4 Bf5 12. h4 h5 13. Qa4 Bd7 14. Qb4 Bf5...</p>
+              <%= game[0].white_player.last_name %><span class="smaller-font"><%= " (#{game[0].elo_white}) " if game[0].elo_white.present? %></span> <span class="italique">vs</span> <%= game[0].black_player.last_name %><span class="smaller-font"><%= " (#{game[0].elo_black}) " if game[0].elo_black.present? %></span>
+
+            <% else %>
+
+              <span><%= game[0].name %></span>
+
+            <% end %>
+
+          </h5>
+
+          <h6 class="result-game-card-description">Result: <%= game[0].result %></h6>
+
+          <p class="card-text game-card-moves">
+
+            <% array = game[0].main_sorted_plies.map do |ply| %>
+              <% "#{ply.display_move_number} #{ply.move} " %>
+            <% end %>
+            <% if game[1].odd? %>
+              <%= array.join(" ").split[(game[1]-1)..-1].first(21).join(" ") %>
+            <% else %>
+              <%= array.join(" ").split[(game[1]-2)..-1].first(21).join(" ") %>
+            <% end %>
+          </p>
+
+
         </div>
       </div>
 
     <% end %>
 
-<!--   </div> -->
+  <% else %>
+
+    <p>Congrats this position is unique (at least in our database). You might want to try searching from a broader position...</p>
+
+  <% end %>
 
 </div>
