--- a/app/assets/stylesheets/components/_game-cards.scss
+++ b/app/assets/stylesheets/components/_game-cards.scss
@@ -23,24 +23,35 @@
   font-weight: bold;
 }
 
-.list-of-games :last-child .game-card {
-  border-bottom: solid 1px LightGray;
-}
-
-// .game-card-header {
-//   color: black;
-//   font-weight: bold;
-// }
-.game-card-body {
-  // position: absolute;
-  // top: 25px;
-  // left: 5px;
-}
-
 .game-card-players {
-  font-size:12px;
-  color: black;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 25px;
+  padding-right: 25px;
+  font-size: 14px;
+  min-height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: solid 1px LightGray;
+  text-align: center;
   // font-weight: bold;
+  &:hover {
+  // transform: scale(1.05);
+  background-color: #3183A8;
+  }
+}
+
+.game-card-players-player {
+  flex-basis: 33%;
+}
+
+.game-card-players-result {
+  flex-basis: 33%;
+}
+
+.list-of-games :last-child .game-card-players {
+  border-bottom: solid 1px LightGray;
 }
 
 .game-card-description {
