--- a/app/views/games/chessbox_search.js.erb
+++ b/app/views/games/chessbox_search.js.erb
@@ -1,8 +1,6 @@
 document.getElementById("chessgame-board").innerHTML = "";
 document.getElementById("chessgame-board").innerHTML =  "<div id='chessgame'></div> <%= j render 'shared/chess_box_controls' %>"
-document.querySelector(".chess-moves").innerHTML = "";
-document.querySelector(".find-button").innerHTML = "";
-document.querySelector(".search-notation").innerHTML = "";
+document.querySelector(".search-input").innerHTML = "";
 
 
 function populateChessBox(chessboxHTML) {
