--- a/app/views/shared/_chessbox_find_notation.html.erb
+++ b/app/views/shared/_chessbox_find_notation.html.erb
@@ -1,4 +1,4 @@
-<div class="game-notation">
+<div class="game-notation-find">
   <div class="chess-headers">
     <% if game.white_player.present? && game.black_player.present? %>
       <div class="players">
