--- a/app/assets/stylesheets/layouts/_sidebar_collection.scss
+++ b/app/assets/stylesheets/layouts/_sidebar_collection.scss
@@ -4,6 +4,7 @@
   transition: all 0.3s;
   padding: 0;
   height: calc(100vh - 70px);
+  border-right: 1px solid LightGray
 }
 
 .sidebar-header {
@@ -13,18 +14,13 @@
   font-weight: bold;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .sidebar-games-title{
   color: #1E5772;
+  font-size: 16px;
 }
-
-// .sidebar-header i {
-//   opacity: 0.6;
-// }
-// .sidebar-header i:hover {
-//   opacity: 1;
-// }
 
 .pin-left-bottom {
   position: absolute;
@@ -33,80 +29,3 @@
   font-size: 30px;
 }
 
-// #sidebar ul.components {
-//     padding: 20px 0;
-//     border-bottom: 1px solid #47748b;
-// }
-
-// #sidebar ul p {
-//     color: #fff;
-//     padding: 10px;
-// }
-
-// #sidebar ul li a {
-//     padding: 10px;
-//     font-size: 1.1em;
-//     display: block;
-// }
-// #sidebar ul li a:hover {
-//     color: #7386D5;
-//     background: #fff;
-// }
-
-// ul ul a {
-//     font-size: 0.9em !important;
-//     padding-left: 30px !important;
-//     background: #6d7fcc;
-// }
-
-// /* Shrinking the sidebar from 250px to 80px and center aligining its content*/
-// #sidebar.active {
-//     min-width: 80px;
-//     max-width: 80px;
-//     text-align: center;
-// }
-
-// /* Toggling the sidebar header content, hide the big heading [h3] and showing the small heading [strong] and vice versa*/
-// #sidebar .sidebar-header strong {
-//     display: none;
-// }
-// #sidebar.active .sidebar-header h3 {
-//     display: none;
-// }
-// #sidebar.active .sidebar-header strong {
-//     display: block;
-// }
-
-// #sidebar ul li a {
-//     text-align: left;
-// }
-
-// #sidebar.active ul li a {
-//     padding: 20px 10px;
-//     text-align: center;
-//     font-size: 0.85em;
-// }
-
-// #sidebar.active ul li a i {
-//     margin-right:  0;
-//     display: block;
-//     font-size: 1.8em;
-//     margin-bottom: 5px;
-// }
-
-// /* Same dropdown links padding*/
-// #sidebar.active ul ul a {
-//     padding: 10px !important;
-// }
-
-// /* Changing the arrow position to bottom center position,
-//    translateX(50%) works with right: 50%
-//    to accurately  center the arrow */
-// #sidebar.active .dropdown-toggle::after {
-//     top: auto;
-//     bottom: 10px;
-//     right: 50%;
-//     -webkit-transform: translateX(50%);
-//     -ms-transform: translateX(50%);
-//     transform: translateX(50%);
-// }
