--- a/app/assets/stylesheets/layouts/_sidebar_games.scss
+++ b/app/assets/stylesheets/layouts/_sidebar_games.scss
@@ -3,7 +3,7 @@
     background: White;
     transition: all 0.3s;
     padding: 0;
-    border-left: solid 1px LightGray;
+    // border-left: solid 1px LightGray;
     border-right: solid 1px LightGray;
     overflow-y: scroll;
 }
