--- a/app/views/games/search.html.erb
+++ b/app/views/games/search.html.erb
@@ -1,48 +1,49 @@
 <div class="wrapper-white">
-
   <div class="container-fluid">
     <div class="row">
 
       <%= render "shared/sidebar_collection" %>
 
-        <div class="board col-sm-4" id="chessgame-board">
-          <div id="chessgame-board">
-            <div id="chessgame-find"></div>
-          </div>
+      <div class="col-sm-10 search-page-box">
+
+        <div id="chessgame-board">
+          <div id="chessgame-find"></div>
           <div id="fen" data-fen="<%=@search_fen%>"></div>
           <div id="moves" data-moves="<%= @moves_string %>"></div>
           <%= render "shared/chess_box_controls" %>
         </div>
 
-        <div class="col-sm-3">
+        <div class="search-notation">
 
-          <div class="search-notation">
+          <div class="search-input">
 
-            <div class="search-headers">
-              Search games by position
-            </div>
+            <div class="search-input-notation">
+              <div class="search-headers">
+                Search games by position
+              </div>
 
-            <div class="moves-input">
-              <div class="chess-moves">
-                <% if @moves.present? %>
-                  <% @moves.each_with_index do |move, index| %>
-                    <% if (index % 2).zero? && index == 0 %>
-                      <span class="moves-bold">1.</span>
-                    <% elsif (index % 2).zero? && index != 0  %>
-                      <span class="moves-bold"> <%= "#{(index + 3) / 2}." %> </span>
+              <div class="moves-input">
+                <div class="chess-moves">
+                  <% if @moves.present? %>
+                    <% @moves.each_with_index do |move, index| %>
+                      <% if (index % 2).zero? && index == 0 %>
+                        <span class="moves-bold">1.</span>
+                      <% elsif (index % 2).zero? && index != 0  %>
+                        <span class="moves-bold"> <%= "#{(index + 3) / 2}." %> </span>
+                      <% end %>
+                      <span class="moves moves-bold"><%=move%></span>
                     <% end %>
-                    <span class="moves moves-bold"><%=move%></span>
                   <% end %>
-                <% end %>
+                </div>
               </div>
             </div>
 
-          </div>
 
+            <div class="find-button">
+              <%= hidden_field_tag :authenticity_token, form_authenticity_token, id: "token" %>
+              <button id="find-game-button" class="btn btn-primary">Find games</button>
+            </div>
 
-          <div class="find-button">
-            <%= hidden_field_tag :authenticity_token, form_authenticity_token, id: "token" %>
-            <button id="find-game-button" class="btn btn-primary">Find games</button>
           </div>
 
           <div id="chessbox-search">
@@ -50,15 +51,17 @@
 
         </div>
 
-      <div class="col-sm-3" id="search-results">
-        <%= render "shared/search_results", games: @games %>
+        <div id="search-results">
+          <%= render "shared/search_results", games: @games %>
+        </div>
+
       </div>
+
 
     </div>
   </div>
-
-
 </div>
+
 
 
 
